# biliget

./: .cargo-release.toml  .gitignore  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: check.yaml  release.yaml
src/: cli.rs  main.rs
src/clip/: ffmpeg.rs
src/downloader/: download.rs
src/extract/: bilibili.rs  bvid.rs  error.rs  extract.rs  headers.rs  json_struct.rs  mod.rs  result.rs  video_info.rs
src/processer/: ffmpeg.rs  mod.rs  process.rs
src/util/: http.rs  mod.rs  path.rs  size_fmt.rs  space.rs  temp.rs
