[package]
name = "biliget"
version = "0.1.0"
edition = "2024"
authors = ["lfcypo <lfcypo@gmail.com>"]
readme = "README.md"

[dependencies]
http = "1.4.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0.145"
regex = "1.12.2"
lazy_static = "1.5.0"
thiserror = "2.0.17"

[[bin]]
name = "biliget"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
