[package]
name = "biliget"
version = "0.6.4"
edition = "2024"
readme = "README.md"
description = "简单的B站视频下载工具 支持免登录下载B站高清视频"

authors = ["lfcypo <lfcypo@gmail.com>"]
license = "MIT"
repository = "https://github.com/lfcypo/biliget"

homepage = "https://github.com/lfcypo/biliget"
keywords = ["bilibili", "download", "cli", "video"]
categories = ["command-line-utilities"]

[dependencies]
http = "1.4.0"
serde_json = "1.0.145"
regex = "1.12.2"
lazy_static = "1.5.0"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
ctrlc = "3.5.1"
sanitize-filename = "0.6.0"
fast-down = "3.6.3"
tokio = { version = "1.49.0", default-features = false, features = [
    "io-std",
    "macros",
    "rt-multi-thread",
    "signal"
] }
url = "2.5.8"
fs4 = "0.13.1"
reqwest = { version = "0.13.2", features = ["json", "query"] }
parking_lot = "0.12.5"

[[bin]]
name = "biliget"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
